--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.31</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.24</version>
+        </dependency>
+
     </dependencies>
 </project>
